Add dirmngr to build-packages for lma-prep
LP builds fail due to the lack of dirmngr:

gpg: failed to start the dirmngr '/usr/bin/dirmngr':
No such file or directory

The tactical fix would be to add it, however, this will be removed once
the confinement patch change lands.

Change-Id: I955be9e91476a3da62d6c6ba954815220443d491

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1006,6 +1006,8 @@ parts:
   lma-build-prep:
     plugin: nil
     source: ""
+    build-packages:
+        - dirmngr
     override-build: |
       cat $SNAPCRAFT_PROJECT_DIR/filebeat.pgp.key | apt-key add -
       cat $SNAPCRAFT_PROJECT_DIR/telegraf.pgp.key | apt-key add -
